create a navigable table of contents

--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>{{ .Site.Title}}</h1>
     {{ .Content }}
+    <nav class="header-menu"></nav>{{ partial "nav" . }}</nav>
 </body>
 </html>
